nextcloud/manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nextcloud
  namespace: nextcloud
  annotations:
    gethomepage.dev/enabled: "true"
    cert-manager.io/cluster-issuer: letsencrypt-cloudflare
    gethomepage.dev/name: Nextcloud
    gethomepage.dev/description: Files, calendar and contacts
    gethomepage.dev/group: Applications
    gethomepage.dev/icon: nextcloud.png
    gethomepage.dev/href: https://nextcloud.k8s.internal.smigorx.eu
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
    traefik.ingress.kubernetes.io/service.serversscheme: http
spec:
  ingressClassName: traefik

  rules:
    - host: nextcloud.k8s.internal.smigorx.eu
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nextcloud
                port:
                  name: http
  tls:
    - hosts:
        - nextcloud.k8s.internal.smigorx.eu
      secretName: nextcloud-tls
